Twisted-based process logging, fixed README.md

--- a/_jinja/addons.macro.yml
+++ b/_jinja/addons.macro.yml
@@ -1,7 +1,8 @@
-{%- macro git_addon(name, type, repo_url) %}
+{%- macro git_addon(name, type, repo_url, branch='master') %}
   {{name}}:
     type: {{type}}
     repo:
       type: git
       remote: {{repo_url}}
+      branch: {{branch}}
 {% endmacro -%}
